# mentor

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml
cmd/: __main__.py  command_line.py
config/: config.yml
frontend/: .env-example  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: index.js
frontend/src/components/ChatBox/: ChatBox.css  ChatBox.jsx
frontend/src/components/ChatBox/tests/: ChatBox.test.jsx
frontend/src/components/ChatInput/: ChatInput.css  ChatInput.jsx
frontend/src/components/ChatInput/tests/: ChatInput.test.jsx
frontend/src/components/ChatMessage/: ChatMessage.css  ChatMessage.jsx
frontend/src/components/ChatMessage/tests/: ChatMessage.test.jsx
frontend/src/services/: QueryService.js
lib/: __init__.py  config.py
lib/loaders/: hash_cache.py
server/: __init__.py  api.py  server_config.py
src/: __init__.py
src/cmd/: command_line.py
src/lib/: environment_variables.py
src/loaders/: file_loader.py  hash_cache.py  loader_utils.py  repo_loader.py
src/server/: __init__.py  api.py
tests/manual/: milvus_connection.py  print_prompt.py  test_milvus_connection.py
