[tool.poetry]
name = "mentor"
version = "0.1.0"
description = "Create an LLM mentor for your codebase"
authors = ["Alex Schneider <aschnides123@gmail.com>"]
readme = "README.md"
packages = [
    { include = "server" },
    { include = "cmd" },
    { include = "lib" }
]

[tool.poetry.dependencies]
python = "^3.11.3"
pathspec = ">=0.11.1,<0.12.0"
langchain = ">=0.0.156,<0.1.0"
python-dotenv = ">=1.0.0,<1.1.0"
requests = ">=2.29.0,<2.30.0"
pyyaml = ">=6.0,<7.0"
idna = ">=3.4,<4.0"
multidict = ">=6.0.4,<6.1.0"
attrs = ">=23.1.0,<23.2.0"
numpy = ">=1.24.3,<1.25.0"
setuptools = ">=65.5.1,<65.6.0"
pytz = ">=2023.3,<2024.0"
pydantic = ">=1.10.7,<1.11.0"
yarl = ">=1.9.2,<1.10.0"
aiohttp = ">=3.8.4,<3.9.0"
aiosignal = ">=1.3.1,<1.4.0"
frozenlist = ">=1.3.3,<1.4.0"
certifi = ">=2022.12.7,<2022.13.0"
numexpr = ">=2.8.4,<2.9.0"
six = ">=1.16.0,<1.17.0"
urllib3 = ">=1.26.15,<1.27.0"
tenacity = ">=8.2.2,<8.3.0"
sqlalchemy = ">=2.0.12,<2.1.0"
pandas = ">=2.0.1,<2.1.0"
marshmallow = ">=3.19.0,<3.20.0"
packaging = ">=23.1,<24.0"
flask = ">=2.3.2,<2.4.0"
pymilvus = ">=2.2.8,<2.3.0"
nose = ">=1.3.7,<1.4.0"
click = ">=8.1.3,<8.2.0"
api = ">=0.0.7,<0.1.0"
flask-restful = ">=0.3.9,<0.4.0"
openai = "^0.27.6"
tiktoken = "^0.4.0"
gitpython = "^3.1.31"
flask-cors = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
tox = "^3.24.4"
tox-pyenv = "^1.1.0"
pytest-watch = "^4.2.0"

[tool.poetry.scripts]
mentor = 'cmd.__main__:run'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/schnides123/mentor/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
